# tui-jot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  main.rs
src/config/: mod.rs  settings.rs
src/core/: graph.rs  index.rs  mod.rs  note.rs  vault.rs
src/input/: handler.rs  mod.rs
src/ui/: backlinks.rs  browser.rs  find_in_note.rs  finder.rs  graph_view.rs  layout.rs  mod.rs  search.rs  tag_filter.rs  theme.rs  viewer.rs  viewer_state.rs
